--- a/_posts/2021-01-05-markdown1.md
+++ b/_posts/2021-01-05-markdown1.md
@@ -3,7 +3,7 @@ layout: post
 title: "Desktop Publishing with Markdown and CSS"
 date: 2021-01-05
 ---
-I am a big fan of Markdown. There's just something about it's syntax that really clicks for me. If nothing else, it minimizes the number of times I need to reach for a mouse, which is always nice. As a familiarization project, I planned to start off 2021 by writing a parser for Markdown documents. As I started checking out other parsers, however, I got excited with how robust and fast existing solution are. I was particularly drawn to how easily many of the major packages can be extended. Rather than reinvent the wheel with a brand new parser, I think I would rather do something creative with one of these existing solutions.  
+I am a big fan of Markdown. There's just something about its syntax that really clicks for me. If nothing else, it minimizes the number of times I need to reach for a mouse, which is always nice. As a familiarization project, I planned to start off 2021 by writing a parser for Markdown documents. As I started checking out other parsers, however, I got excited with how robust and fast existing solution are. I was particularly drawn to how easily many of the major packages can be extended. Rather than reinvent the wheel with a brand new parser, I think I would rather do something creative with one of these existing solutions.  
 I have never put the time into understanding desktop publishing software properly. For the handful of times I use it a year, I typically just bash things together until it looks fine, and quickly export it to a static format before I mess anything up. For me, learning the proper workflow is a bit of a dead end because of how infrequently I need to use it. On the other hand, HTML and CSS are technologies I use frequently. Why not create an application meant to leverage those skills for print media.  
 ### Goals
 - Basic markdown text editor with support for CommonMark syntax.
